@@ -2,7 +2,7 @@ package Pod::Weaver::Config;
 use Moose::Role;
 # ABSTRACT: stored configuration loader role
 
-use Config::MVP 0.093120;
+use Config::MVP 1;
 with q(Config::MVP::Reader) => { -excludes => 'build_assembler' };
 
 use Pod::Weaver::Config::Assembler;
