@@ -1,6 +1,7 @@
 Revision history for Pod-Weaver
 
 {{$NEXT}}
+          compat with Config::MVP::Reader v1
 
 3.101270  2010-05-07 21:36:45 America/New_York
           allow an explicit header arg to Generic
